--- a/sass/partials/global/_base.scss
+++ b/sass/partials/global/_base.scss
@@ -9,7 +9,7 @@
 ////////////////////////
 // Private Imports
 ////////////////////////
-//@import 'variables';
+@import 'variables';
 //@import 'functions';
 //@import 'mixins';
 //@import 'extendables';
