--- a/sass/style.scss
+++ b/sass/style.scss
@@ -12,7 +12,12 @@
 //////////////////////////
 // Import Externals
 ////////////////////////
-@import 'partials/libraries/libraries';
+//@import 'partials/libraries/libraries';
+
+//////////////////////////
+// Import Externals Development
+////////////////////////
+@import 'partials/development/libraries';
 
 //////////////////////////
 // Base Import
