adding some examples for susy

--- a/sass/partials/libraries/_libraries.scss
+++ b/sass/partials/libraries/_libraries.scss
@@ -37,6 +37,6 @@ below are some common examples you can comment out
 /* -- Delete this line if you want to use this library
 //Susy
 //Follow the instructions here http://susydocs.oddbird.net/en/latest/install/#manual-start
-//Name your folder Susy and include your scss in _susy.scss
+//Name your folder Susy and include _susy.scss
 @import 'susy/susy';
 // */
